@@ -1,3 +1,13 @@
+2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b42
+
+ * Change: Added 3rd param $comment_text to drawCommentAddForm()
+		   This way the comment Text is not lost after reloadin captcha
+   Thanks to Kai Tomalik.
+
+ * Change: "Add comment", Change width of from 500 to 600
+
+ * Change: Nicified layout of Buttons in captcha.
+		
 2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b41
 
  * Fix: yui sub album tree on startpage was broken for Opera an IE.
